# maitai

./: .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  default.nix  flake.nix  readme.org  todo.org
.github/: renovate.json
.github/workflows/: action.yml
src/: CMakeLists.txt  module.cc
src/checks/: maitai_example.cc  maitai_example.hh
